--- a/public/static/styles.css
+++ b/public/static/styles.css
@@ -109,8 +109,6 @@ body,
 header,
 footer,
 a,
-ul,
-li,
 h1,
 p {
   padding: 0;
@@ -124,17 +122,13 @@ pre {
   font-size: 14px;
   font-family: 'Source Code Pro' !important;
 }
-ul,
-li {
-  list-style: none;
-}
 a {
   text-decoration: none;
-  color: #1e90ff;
+  color: #333;
   transition: color 0.5s;
 }
 a:hover {
-  color: #006cd6;
+  color: #000;
 }
 h1 {
   font-size: 36px;
@@ -146,20 +140,23 @@ body {
 }
 #header {
   padding: 48px;
-  border-bottom: 1px solid #1e90ff;
-  font-weight: bold;
   color: #1e90ff;
   text-align: center;
+  font-size: 24px;
+  color: #111;
 }
 #header h1 {
   font-size: 36px;
-  background: #1e90ff;
   display: inline-block;
   padding: 0.3em;
   margin-bottom: 0.25em;
+  font-weight: bold;
 }
 #header h1 a {
-  color: #fff;
+  color: #111;
+}
+#header h1 a:hover {
+  color: #1e90ff;
 }
 #main {
   padding: 48px;
@@ -183,12 +180,17 @@ body {
 }
 .meta ul,
 .meta li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
   float: left;
 }
-.meta .tag {
+.meta .tag,
+.meta .cat {
   padding-right: 0.5em;
 }
-.meta .tag:hover {
+.meta .tag:hover,
+.meta .cat:hover {
   color: #1e90ff;
   cursor: pointer;
   transition: color 0.5s;
